WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145017
Local storage origins should include origins with transient local storage
https://bugs.webkit.org/show_bug.cgi?id=145017
Summary
Local storage origins should include origins with transient local storage
Anders Carlsson
Reported
2015-05-14 13:32:34 PDT
Local storage origins should include origins with transient local storage
Attachments
Patch
(6.63 KB, patch)
2015-05-14 13:33 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-05-14 13:33:58 PDT
Created
attachment 253141
[details]
Patch
WebKit Commit Bot
Comment 2
2015-05-14 13:37:04 PDT
Attachment 253141
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Storage/StorageManager.h:62: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Storage/StorageManager.cpp:529: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3
2015-05-14 14:39:02 PDT
Comment on
attachment 253141
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=253141&action=review
> Source/WebKit2/ChangeLog:5 > + Local storage origins should include origins with transient local storage > +
https://bugs.webkit.org/show_bug.cgi?id=145017
> +
rdar://problem/10690447
I think this needs a clearer explanation. I assume this is transient local storage that is due to portioning, rather than private browsing mode.
Anders Carlsson
Comment 4
2015-05-14 14:44:56 PDT
Committed
r184356
: <
http://trac.webkit.org/changeset/184356
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug